syntax = "proto3";

package protogen;

option go_package = "fileup/protogen";

message FileUploadRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk = 2;
  };
}

message FileInfo {
  string file_name = 1;
  string file_type = 2;
}

message FileUploadResponse {
  string id = 1;
  uint32 size = 2;
}

service FileUploadService {
    rpc FileUpload(stream FileUploadRequest) returns (FileUploadResponse) {};
}